syntax = "proto3";
package spellfire;

import "types.proto";

option go_package = "github.com/Icemaster-Eric/Spellfire/backend/internal/proto;proto";

enum ClientEventType {
  CLIENT_EVENT_TYPE_UNSPECIFIED = 0;
  ENTER_GAME = 1;
}

message ClientEvent {
  ClientEventType type = 1;
}

message ClientPacket {
  Timestamp timestamp = 1;
  Vec2 position = 2;
  repeated ClientEvent events = 3;
}